# miru

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml  secrets.yml
lib-mal/: CHANGELOG.md  Cargo.toml  README.md
lib-mal/src/: lib.rs  model.rs
lib-mal/src/model/: fields.rs  mod.rs  options.rs
miru/: Cargo.toml
miru/src/: main.rs
src/: main.rs  subcommands.rs  utils.rs
