[package]
name = "miru"
version = "0.1.0-alpha"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib-mal="0.4.0"
tokio = {version = "1.8.2", features = ["full"]}
webbrowser = "0.5.5"
directories = "3.0"
spinners = "2.0.0"
crossterm = "0.20.0"
clap = "2.33.3"
cli-table = "0.4.6"
