[package]
name = "lib-mal"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.4"
rust-crypto = "0.2.36"
rand = "0.8.4"
tiny_http = "0.8.2"
pkce = "0.1.1"
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"
