[package]
name = "lib-mal"
version = "0.0.1"
edition = "2018"
description = "A library for interacting with the MyAnimeList API"
readme = "./README.md"
repository = "https://github.com/AnActualEmerald/miru/tree/main/lib-mal"
license-file = "./LICENSE"
license = "GPL-3.0"
keywords = ["api", "MyAnimeList", "MAL", "anime"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.4"
rust-crypto = "0.2.36"
rand = "0.8.4"
tiny_http = "0.8.2"
directories = "3.0"
pkce = "0.1.1"
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"